@@ -1,23 +1,22 @@
 package com.everywhere.backend.service.impl;
-
-import com.everywhere.backend.exceptions.BadRequestException;
+ 
 import com.everywhere.backend.model.dto.PersonaJuridicaRequestDTO;
 import com.everywhere.backend.model.dto.PersonaJuridicaResponseDTO;
 import com.everywhere.backend.model.entity.PersonaJuridica;
 import com.everywhere.backend.model.entity.Personas;
 import com.everywhere.backend.repository.PersonaJuridicaRepository;
 import com.everywhere.backend.repository.PersonaRepository;
-import com.everywhere.backend.service.PersonaJuridicaService;
+import com.everywhere.backend.service.PersonaJuridicaService; 
+
 import com.everywhere.backend.exceptions.ResourceNotFoundException;
 import com.everywhere.backend.mapper.PersonaJuridicaMapper;
 import com.everywhere.backend.mapper.PersonaMapper;
-import org.springframework.stereotype.Service;
-import lombok.RequiredArgsConstructor;
 
-import java.time.LocalDateTime;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.stereotype.Service;
+import lombok.RequiredArgsConstructor; 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Optional; 
 
 @Service
 @RequiredArgsConstructor
@@ -30,7 +29,7 @@ public class PersonaJuridicaServiceImpl implements PersonaJuridicaService {
 
     @Override
     public List<PersonaJuridicaResponseDTO> findAll() {
-        return personaJuridicaRepository.findAll().stream().map(personaJuridicaMapper::toResponseDTO).collect(Collectors.toList());
+        return personaJuridicaRepository.findAll().stream().map(personaJuridicaMapper::toResponseDTO).toList();
     }
 
     @Override
@@ -42,45 +41,38 @@ public class PersonaJuridicaServiceImpl implements PersonaJuridicaService {
 
     @Override
     public List<PersonaJuridicaResponseDTO> findByRuc(String ruc) {
-        Optional<PersonaJuridica> persona = personaJuridicaRepository.findByRucIgnoreCase(ruc);
-        if (persona.isEmpty())
+        Optional<PersonaJuridica> personaJuridOptional = personaJuridicaRepository.findByRucIgnoreCase(ruc);
+        if (personaJuridOptional.isEmpty())
             throw new ResourceNotFoundException("No se encontró persona jurídica con RUC: " + ruc);
-        return List.of(personaJuridicaMapper.toResponseDTO(persona.get()));
+        return List.of(personaJuridicaMapper.toResponseDTO(personaJuridOptional.get()));
     }
 
     @Override
     public List<PersonaJuridicaResponseDTO> findByRazonSocial(String razonSocial) {
-        List<PersonaJuridica> personas = personaJuridicaRepository.findByRazonSocialIgnoreAccents(razonSocial);
-        if (personas.isEmpty())
-            throw new ResourceNotFoundException("No se encontraron personas jurídicas con razón social: " + razonSocial);    
-        return personas.stream().map(personaJuridicaMapper::toResponseDTO).collect(Collectors.toList());
+        List<PersonaJuridica> personaJuridicaList = personaJuridicaRepository.findByRazonSocialIgnoreAccents(razonSocial);
+        if (personaJuridicaList.isEmpty())
+            throw new ResourceNotFoundException("No se encontraron personas jurídicas con razón social: " + razonSocial);
+        return personaJuridicaList.stream().map(personaJuridicaMapper::toResponseDTO).toList();
     }
 
     @Override
     public PersonaJuridicaResponseDTO save(PersonaJuridicaRequestDTO personaJuridicaRequestDTO) {
         // Validar que no exista ya una persona con el mismo RUC
-        if (personaJuridicaRequestDTO.getRuc() != null && !personaJuridicaRequestDTO.getRuc().trim().isEmpty()) {
-            Optional<PersonaJuridica> existingPersona = personaJuridicaRepository.findByRucIgnoreCase(personaJuridicaRequestDTO.getRuc().trim());
-            if (existingPersona.isPresent())
-                throw new BadRequestException("Ya existe una persona jurídica con el RUC: " + personaJuridicaRequestDTO.getRuc());
+        if (personaJuridicaRequestDTO.getRuc() != null && !personaJuridicaRequestDTO.getRuc().trim().isEmpty()) { 
+            if (personaJuridicaRepository.findByRucIgnoreCase(personaJuridicaRequestDTO.getRuc().trim()).isPresent())
+                throw new DataIntegrityViolationException("Ya existe una persona jurídica con el RUC: " + personaJuridicaRequestDTO.getRuc());
         }
 
         // Crear la persona base
-        Personas persona = null;
-        if (personaJuridicaRequestDTO.getPersona() != null) 
-            persona = personaMapper.toEntity(personaJuridicaRequestDTO.getPersona());
-        else 
-            persona = new Personas();
-        
-        persona.setCreado(LocalDateTime.now());
-        persona = personaRepository.save(persona);
+        Personas persona = (personaJuridicaRequestDTO.getPersona() != null) 
+            ? personaMapper.toEntity(personaJuridicaRequestDTO.getPersona())
+            : new Personas(); 
 
         // Crear la persona jurídica
         PersonaJuridica personaJuridica = personaJuridicaMapper.toEntity(personaJuridicaRequestDTO);
-        personaJuridica.setPersonas(persona);
-        personaJuridica = personaJuridicaRepository.save(personaJuridica);
+        personaJuridica.setPersonas(personaRepository.save(persona)); 
 
-        return personaJuridicaMapper.toResponseDTO(personaJuridica);
+        return personaJuridicaMapper.toResponseDTO(personaJuridicaRepository.save(personaJuridica));
     }
 
     @Override
@@ -89,15 +81,16 @@ public class PersonaJuridicaServiceImpl implements PersonaJuridicaService {
                 .orElseThrow(() -> new ResourceNotFoundException("Persona jurídica no encontrada con ID: " + id));
 
         // Validar que no exista otra persona con el mismo RUC
-        if (personaJuridicaRequestDTO.getRuc() != null && !personaJuridicaRequestDTO.getRuc().trim().isEmpty()) {
-            Optional<PersonaJuridica> personaConMismoRuc = personaJuridicaRepository.findByRucIgnoreCase(personaJuridicaRequestDTO.getRuc().trim());
-            if (personaConMismoRuc.isPresent() && !personaConMismoRuc.get().getId().equals(id)) 
-                throw new BadRequestException("Ya existe otra persona jurídica con el RUC: " + personaJuridicaRequestDTO.getRuc());
+        if (personaJuridicaRequestDTO.getRuc() != null && !personaJuridicaRequestDTO.getRuc().trim().isEmpty()) { 
+            String newRuc = personaJuridicaRequestDTO.getRuc().trim();
+            if (!newRuc.equalsIgnoreCase(existingPersonaJuridica.getRuc())) {
+                if (personaJuridicaRepository.findByRucIgnoreCaseAndIdNot(newRuc, id).isPresent())
+                    throw new DataIntegrityViolationException("Ya existe otra persona jurídica con el RUC: " + personaJuridicaRequestDTO.getRuc());
+            }
         }
 
-        personaJuridicaMapper.updateEntityFromDTO(personaJuridicaRequestDTO, existingPersonaJuridica);
-        existingPersonaJuridica = personaJuridicaRepository.save(existingPersonaJuridica);
-        return personaJuridicaMapper.toResponseDTO(existingPersonaJuridica);
+        personaJuridicaMapper.updateEntityFromDTO(personaJuridicaRequestDTO, existingPersonaJuridica); 
+        return personaJuridicaMapper.toResponseDTO(personaJuridicaRepository.save(existingPersonaJuridica));
     }
 
     @Override
